tests/netgen/grid/errors/grid_y_length__9_9/errors.netgen
Warning: The distance between nodes should be at least 14.50 for the given lanenumber, lanewidth and junction radius
